--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
 .main {
+    padding: 100px;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
     background-color: goldenrod;
 }
